# Memory-Puzzle-Game

./: README.md  Requirements.txt  pyproject.toml
src/memory_puzzle/: __init__.py  assets.py  game.py  main.py  settings.py  ui.py
tests/: test_game.py
